--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ReadyFix Handyman Services</title>
+  <title>ReadyFix Handyman Services | Toronto Same-Day Repairs</title>
+  <meta name="description" content="Fast, reliable handyman services in Toronto: drywall repair, painting touch-ups, door & trim fixes, caulking, TV mounting, shelves. Call 647-699-4607." />
+  <link rel="canonical" href="https://readyfix-inky.vercel.app/" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:title" content="ReadyFix Handyman Services — Toronto" />
+  <meta property="og:description" content="Quick, reliable home solutions. Call 647-699-4607." />
+  <meta property="og:url" content="https://readyfix-inky.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://readyfix-inky.vercel.app/og-cover.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   
@@ -355,5 +370,38 @@
     </div>
     <p>© 2025 ReadyFix Handyman Services. All rights reserved.</p>
   </footer>
+
+
+
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Handyman",
+  "name": "ReadyFix Handyman Services",
+  "image": "https://readyfix-inky.vercel.app/og-cover.jpg",
+  "url": "https://readyfix.ca",
+  "telephone": "+1-647-699-4607",
+  "areaServed": "Toronto, ON",
+  "priceRange": "$$",
+  "openingHours": "Mo-Fr 08:00-18:00",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Toronto",
+    "addressRegion": "ON",
+    "addressCountry": "CA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/yourhandle",
+    "https://www.facebook.com/yourpage",
+    "https://g.page/your-gmb"
+  ]
+}
+</script>
+
+
+
+
+
 </body>
 </html>
