--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ReadyFix Handyman Services | Toronto Same-Day Repairs</title>
   <meta name="description" content="Fast, reliable handyman services in Toronto: drywall repair, painting touch-ups, door & trim fixes, caulking, TV mounting, shelves. Call 647-699-4607." />
-  <link rel="canonical" href="https://readyfix-inky.vercel.app/" />
+  <link rel="canonical" href="https://readyfix.ca" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="ReadyFix Handyman Services — Toronto" />
   <meta property="og:description" content="Quick, reliable home solutions. Call 647-699-4607." />
-  <meta property="og:url" content="https://readyfix-inky.vercel.app/" />
+  <meta property="og:url" content="https://readyfix.ca" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://readyfix-inky.vercel.app/og-cover.jpg" />
+  <meta property="og:image" content="z-photos/ReadyFix-Favicon.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicons -->
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="z-photos/ReadyFix-Favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
