--- a/index.html
+++ b/index.html
@@ -390,10 +390,7 @@
 
   <footer>
     <div class="footer-top">
-      <div>
-        <h2>ReadyFix</h2>
-        <p>HANDYMAN SERVICES</p>
-      </div>
+      <img src="z-photos/ReadyFix Logo Landscape 3.PNG" alt="Logo" style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;"/>
       <div>
         <h4>Pages</h4>
         <ul>
@@ -418,7 +415,7 @@
         </ul>
       </div>
     </div>
-    <p>© 2025 ReadyFix Handyman Services. All rights reserved.</p>
+    <p style="color: #1a1a1a;">© 2025 ReadyFix Handyman Services. All rights reserved.</p>
   </footer>
 
 
