--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -141,7 +141,7 @@
         gap: 24px;
         min-width: 320px;
       ">
-        <h2>Toronto Handyman Services</h2>
+        <h2>Drywall Repair & Patching</h2>
         <p>Quick, reliable home solutions - your trusted Toronto handyman.</p>
         <button class="button" onclick="location.href='tel:6476994607'">647-699-4607</button>
       </div>
@@ -227,7 +227,7 @@
       <h3>Our Services</h3>
       <p>At ReadyFix Handyman Services, we specialize in quick, high-quality home repairs across Toronto from drywall patching and painting touch-ups to door, trim, and shelf installations. No job too small, we’re your go-to for fast, professional results.</p>
       <div class="service-list">
-        <div class="service-item"><div class="icon"></div><a href="drywall-repair-toronto.html">Drywall Repair &amp; Patching</a></div>
+        <div class="service-item"><div class="icon"></div><a href="drywall.html">Drywall Repair &amp; Patching</a></div>
         <div class="service-item"><div class="icon"></div><a href="fence.html">Fence &amp; Deck Repair</a></div>
         <div class="service-item"><div class="icon"></div><a href="door.html">Door Hardware</a></div>
         <div class="service-item"><div class="icon"></div><a href="painting.html">Painting Touch Ups</a></div>
