--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       min-height: 48px;
     ">
 
-      <a href="index.html" style="display:inline-flex;align-items:center;min-height:48px;padding:6px 12px;border-radius:8px;color:#000;text-decoration:none;font-weight:600;margin-right:8px;transition:background-color .15s;" onmouseover="this.style.backgroundColor='#f0f0f0';" onmouseout="this.style.backgroundColor='transparent';">Home</a>
+      <a href="index.html" style="display:inline-flex;align-items:center;min-height:48px;padding:6px 12px;border-radius:8px;color:#000;text-decoration:none;font-weight:600;margin-right:8px;transition:background-color .15s;border:2px solid #000;" onmouseover="this.style.backgroundColor='#f0f0f0';" onmouseout="this.style.backgroundColor='transparent';">Home</a>
       <a href="services.html" style="display:inline-flex;align-items:center;min-height:48px;padding:6px 12px;border-radius:8px;color:#000;text-decoration:none;font-weight:600;margin-right:8px;transition:background-color .15s;" onmouseover="this.style.backgroundColor='#f0f0f0';" onmouseout="this.style.backgroundColor='transparent';">Services</a>
       <a href="about.html" style="display:inline-flex;align-items:center;min-height:48px;padding:6px 12px;border-radius:8px;color:#000;text-decoration:none;font-weight:600;margin-right:8px;transition:background-color .15s;" onmouseover="this.style.backgroundColor='#f0f0f0';" onmouseout="this.style.backgroundColor='transparent';">About</a>
       <a href="tel:6476994607" style="display:inline-flex;align-items:center;min-height:48px;padding:6px 12px;border-radius:8px;color:#000;text-decoration:none;font-weight:700;transition:background-color .15s, color .15s;" onmouseover="this.style.backgroundColor='#e02424'; this.style.color='#ffffff';" onmouseout="this.style.backgroundColor='transparent'; this.style.color='#000';"><strong>647-699-4607</strong></a>
@@ -130,7 +130,7 @@
       justify-content: center;
       gap: 32px;
       min-width: 320px;
-      max-width: 800px;
+      max-width: 992px;
       width: 100%;
       ">
 
@@ -223,9 +223,9 @@
   align-items:center;
   justify-content:center;
   ">
-    <div style="max-width:800px">
-      <h3>Our Services</h3>
-      <p>At ReadyFix Handyman Services, we specialize in quick, high-quality home repairs across Toronto from drywall patching and painting touch-ups to door, trim, and shelf installations. No job too small, we’re your go-to for fast, professional results.</p>
+    <div style="max-width:992px">
+      <h2 style="margin-bottom: 16px;">Our Services</h2>
+      <p style="margin-bottom: 32px;">At ReadyFix Handyman Services, we specialize in quick, high-quality home repairs across Toronto from drywall patching and painting touch-ups to door, trim, and shelf installations. No job too small, we’re your go-to for fast, professional results.</p>
       <div class="service-list">
         <div class="service-item"><div class="icon"></div><a href="drywall-repair-toronto.html">Drywall Repair &amp; Patching</a></div>
         <div class="service-item"><div class="icon"></div><a href="fence.html">Fence &amp; Deck Repair</a></div>
@@ -260,7 +260,7 @@
    justify-content:center;
   "
   >
-    <h3>Pricing</h3>
+    <h2>Pricing</h2>
     <p>$25 - Visitation Fee (No work done)</p>
     <p>$150 + materials - 2-hour minimum</p>
     <p>$290 + materials - Half-day</p>
@@ -286,7 +286,7 @@
     <div id="contact-form" 
     style="
       width: 100%;
-      max-width: 800px;
+      max-width: 992px;
       box-sizing: border-box;
       background-color: #ffffff;
       border: 1px solid #d0d0d0;
