Update logo images and alt text for improved accessibility

--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -37,7 +37,7 @@
       border-bottom: 1px solid #ddd;
       min-height: 82px;
     ">
-    <img src="z-photos/ReadyFix Logo Landscape 3.PNG" alt="Logo" style="max-width: 120px;"/>
+    <img src="z-photos/ReadyFix -Logo-Card.avif" alt="Logo" style="max-width: 120px;"/>
     <nav id="monitornav" style="
       display: flex;
       flex-direction: row;
@@ -145,10 +145,12 @@
         <p>Quick, reliable home solutions - your trusted Toronto handyman.</p>
         <button class="button" onclick="location.href='tel:6476994607'">647-699-4607</button>
       </div>
-      <img id="right" src="z-photos/handyman-using-mitre-saw.avif" alt="Painting Fence" style="flex-basis: 320px; flex-grow: 1; height:250px; object-fit:cover; display:block;">
+      <img id="right" src="z-photos/handyman-using-mitre-saw.avif" alt="Handyman using mitre saw" style="flex-basis: 320px; flex-grow: 1; height:250px; object-fit:cover; display:block;">
       
   </section>
 
+
+  
   
   
   
@@ -366,7 +368,7 @@
       "
       >
         <label for="message">Message</label>
-        <input id="messsage" type="text" placeholder="How can we help you" style="
+        <input id="message" type="text" placeholder="How can we help you" style="
         padding-left: 16px;
         padding-right: 16px;
         height: 120px;
@@ -385,7 +387,7 @@
 
   <footer>
     <div class="footer-top">
-      <img src="z-photos/ReadyFix Logo Landscape 3.PNG" alt="Logo" style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;"/>
+      <img src="z-photos/ReadyFix -Logo-Card.avif" alt="Logo" style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;"/>
       <div>
         <h4>Pages</h4>
         <ul>
