Add lazy loading and async decoding to handyman image for performance improvement

--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -145,7 +145,12 @@
         <p>Quick, reliable home solutions - your trusted Toronto handyman.</p>
         <button class="button" onclick="location.href='tel:6476994607'">647-699-4607</button>
       </div>
-      <img id="right" src="z-photos/handyman-using-mitre-saw.avif" alt="Handyman using mitre saw" style="flex-basis: 320px; flex-grow: 1; height:250px; object-fit:cover; display:block;">
+      <img id="right" 
+      src="z-photos/handyman-using-mitre-saw.avif" 
+      loading="lazy"
+      decoding="async"
+      alt="Handyman using mitre saw" 
+      style="flex-basis: 320px; flex-grow: 1; height:250px; object-fit:cover; display:block;">
       
   </section>
 
