Updated Areas Served

--- a/index.html
+++ b/index.html
@@ -429,7 +429,11 @@
   "image": "z-photos/ReadyFix Handyman Logo.png",
   "url": "https://readyfix.ca",
   "telephone": "+1-647-699-4607",
-  "areaServed": "Toronto, ON", "Scarborough, ON", "Markham, ON",  
+  "areaServed": [
+    "Toronto, ON",
+    "Scarborough, ON",
+    "Markham, ON"
+  ],
   "priceRange": "$$",
   "openingHours": "Mo-Fr 08:00-18:00",
   "address": {
