Add Ready Fix logo image for branding enhancement

--- a/drywall-repair-toronto.html
+++ b/drywall-repair-toronto.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ReadyFix Handyman Services | Toronto Same-Day Repairs</title>
+  <title>Ready Fix Handyman Services | Toronto Same-Day Repairs</title>
   <meta name="description" content="Fast, reliable handyman services in Toronto: drywall repair, painting touch-ups, door & trim fixes, caulking, TV mounting, shelves. Call 647-699-4607." />
   <link rel="canonical" href="https://readyfix.ca" />
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="ReadyFix Handyman Services — Toronto" />
+  <meta property="og:title" content="Ready Fix Handyman Services - Toronto" />
   <meta property="og:description" content="Quick, reliable home solutions. Call 647-699-4607." />
   <meta property="og:url" content="https://readyfix.ca" />
   <meta property="og:type" content="website" />
@@ -176,7 +176,7 @@
   justify-content:center;
   ">
     <div id="inner-why-choose-us" style="width:100%; max-width:992px;">
-      <h2 style="margin-bottom: 16px; text-align: left;">Why Choose ReadyFix for Drywall Repairs</h2>
+      <h2 style="margin-bottom: 16px; text-align: left;">Why Choose Ready Fix Handyman Services for Drywall Repairs</h2>
       <p style="margin-bottom: 32px;">Drywall damage happens - from door handles, plumbing work, or water leaks. ReadyFix Handyman Services provides quick, professional drywall repair and patching throughout Toronto. We restore your walls to a perfect finish without the mess or wait times of big renovation crews.</p>
       <div id="bullet-list">
         <div style="display: flex;  flex-direction: row;  align-content: center; justify-content: center; flex: 1 1 auto; margin-bottom: 6px;">
@@ -405,8 +405,6 @@
         <h4>Service Area</h4>
         <ul>
           <li>Toronto, ON</li>
-          <li>Scarborough, ON</li>
-          <li>Markham, ON</li>
         </ul>
       </div>
       <div>
@@ -427,14 +425,12 @@
 {
   "@context": "https://schema.org",
   "@type": "Handyman",
-  "name": "ReadyFix Handyman Services",
+  "name": "Ready Fix Handyman Services",
   "image": "z-photos/ReadyFix Handyman Logo.png",
   "url": "https://readyfix.ca",
   "telephone": "+1-647-699-4607",
   "areaServed": [
     "Toronto, ON",
-    "Scarborough, ON",
-    "Markham, ON"
   ],
   "priceRange": "$$",
   "openingHours": "Mo-Fr 08:00-18:00",
@@ -446,8 +442,6 @@
   },
   "sameAs": [
     "https://www.instagram.com/readyfix.ca/",
-    "https://www.facebook.com/yourpage",
-    "https://g.page/your-gmb"
   ]
 }
 </script>
