--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ReadyFix Handyman Services | Toronto Same-Day Repairs</title>
+  <title>Ready Fix Handyman Services | Toronto Same-Day Repairs</title>
   <meta name="description" content="Fast, reliable handyman services in Toronto: drywall repair, painting touch-ups, door & trim fixes, caulking, TV mounting, shelves. Call 647-699-4607." />
   <link rel="canonical" href="https://readyfix.ca" />
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="ReadyFix Handyman Services — Toronto" />
+  <meta property="og:title" content="ReadyFix Handyman Services - Toronto" />
   <meta property="og:description" content="Quick, reliable home solutions. Call 647-699-4607." />
   <meta property="og:url" content="https://readyfix.ca" />
   <meta property="og:type" content="website" />
@@ -37,7 +37,7 @@
       border-bottom: 1px solid #ddd;
       min-height: 82px;
     ">
-    <img src="z-photos/ReadyFix Logo Landscape 3.PNG" alt="Logo" style="max-width: 120px;"/>
+    <img src="z-photos/Ready-Fix-Logo-Card.avif" alt="Logo" style="max-width: 120px;"/>
     <nav id="monitornav" style="
       display: flex;
       flex-direction: row;
@@ -225,7 +225,7 @@
   ">
     <div style="max-width:992px">
       <h2 style="margin-bottom: 16px;">Our Services</h2>
-      <p style="margin-bottom: 32px;">At ReadyFix Handyman Services, we specialize in quick, high-quality home repairs across Toronto from drywall patching and painting touch-ups to door, trim, and shelf installations. No job too small, we’re your go-to for fast, professional results.</p>
+      <p style="margin-bottom: 32px;">At Ready Fix Handyman Services, we specialize in quick, high-quality home repairs across Toronto from drywall patching and painting touch-ups to door, trim, and shelf installations. No job too small, we’re your go-to for fast, professional results.</p>
       <div class="service-list">
         <div class="service-item"><div class="icon"></div><a href="drywall-repair-toronto.html">Drywall Repair &amp; Patching</a></div>
         <div class="service-item"><div class="icon"></div><a href="fence.html">Fence &amp; Deck Repair</a></div>
@@ -390,7 +390,7 @@
 
   <footer>
     <div class="footer-top">
-      <img src="z-photos/ReadyFix Logo Landscape 3.PNG" alt="Logo" style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;"/>
+      <img src="z-photos/Ready-Fix-Logo-Card.avif" alt="Logo" style="max-width: 120px; margin-bottom: 16px; height:fit-content !important;"/>
       <div>
         <h4>Pages</h4>
         <ul>
@@ -403,8 +403,6 @@
         <h4>Service Area</h4>
         <ul>
           <li>Toronto, ON</li>
-          <li>Scarborough, ON</li>
-          <li>Markham, ON</li>
         </ul>
       </div>
       <div>
@@ -415,7 +413,7 @@
         </ul>
       </div>
     </div>
-    <p style="color: #1a1a1a;">© 2025 ReadyFix Handyman Services. All rights reserved.</p>
+    <p style="color: #1a1a1a;">© 2025 Ready Fix Handyman Services. All rights reserved.</p>
   </footer>
 
 
@@ -425,14 +423,12 @@
 {
   "@context": "https://schema.org",
   "@type": "Handyman",
-  "name": "ReadyFix Handyman Services",
+  "name": "Ready Fix Handyman Services",
   "image": "z-photos/ReadyFix Handyman Logo.png",
   "url": "https://readyfix.ca",
   "telephone": "+1-647-699-4607",
   "areaServed": [
     "Toronto, ON",
-    "Scarborough, ON",
-    "Markham, ON"
   ],
   "priceRange": "$$",
   "openingHours": "Mo-Fr 08:00-18:00",
@@ -444,8 +440,6 @@
   },
   "sameAs": [
     "https://www.instagram.com/readyfix.ca/",
-    "https://www.facebook.com/yourpage",
-    "https://g.page/your-gmb"
   ]
 }
 </script>
